--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,57 @@
 @import "~bootstrap/scss/bootstrap.scss";
+#right{
+    float:right;
+    margin-bottom: 6px;
+}
+body {
+    background-color: rgb(54, 52, 52);
+  
+}
 
-/* 
+.cartita {
+    border-color: black;
+    margin-left: 10%;
+     width: 400px;
+     background-color: white;
+}
+.card{
+    background-color: rgba(255, 255, 255, 0.904);
+    height: 500px;
+    width:  500px;
+    margin: auto;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.lista {
+    border-bottom: gray;
+}
 
-*/
+h1{
+    text-align: center;
+    color: gray;
+    font-size: 65px;
+     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+input{
+      padding-left:40px;
+     border: none;
+    
+} 
+li{
+    padding-top: 10px;
+    list-style: none;
+    color: gray;
+    border-top: 1px solid rgb(199, 199, 199);
+    border-bottom: 1px solid rgb(199, 199, 199);
+
+
+}
+
+p{
+    border: gray;
+    padding-top: 10px;
+    margin-left: 5px;
+    list-style: none;
+    color: gray;
+    font-size: 10px;
+     border-top: 1px solid rgb(199, 199, 199);
+}
